6.Updated the paths endpoints for Customer, Sale and SaleReport APIs